# pp-sketchlib

./: .dockerignore  .gitignore  .gitmodules  0001-Use-makefile-in-setup.py.patch  20_listeria.dists.txt  20_rfiles.txt  CMakeLists.txt  LICENSE_bindash  LICENSE_unordered_dense  MANIFEST.in  NOTICE  README.md  README.rst  azure-pipelines.yml  environment.yml  listeria.dists.txt  pp_sketch-runner.py  requirements.txt  rfiles.txt  rfiles_multitest.txt  setup.py  sketchlib-runner.py
.github/workflows/: azure_ci.yml  cuda_ci.yaml
conda_recipe/: meta.yaml
docker/: Dockerfile  common  install  test
pp_sketch/: __init__.py  __main__.py  matrix.py  random_match.py
scripts/: update_highfive.py
src/: 12673_8_24.fa  Makefile  Makefile_fedora38  Makefile_osx  api.cpp  api.hpp  asa058.cpp  asa058.hpp  asa136.cpp  asa136.hpp  bitfuncs.hpp  countmin.cpp  countmin.hpp  cuda.cuh  database.cpp  database.hpp  dist.cpp  dist.cu  dist.hpp  files.hpp  gpu.hpp  gpu_api.cpp  hdf5_funcs.hpp  linear_regression.cpp  linear_regression.hpp  link_function.cpp  link_function.hpp  listeria.dists.xxhash.txt  main.cpp  matrix.hpp  matrix_ops.cpp  matrix_test.cpp  ntHashIterator.hpp  nthash.hpp  random_match.cpp  random_match.hpp  read_test.cpp  reference.cpp  reference.hpp  rfiles.txt  (+12 more)
src/database/: database.cpp  database.hpp  hdf5_funcs.hpp
src/gpu/: align.hpp  containers.cuh  cuda.cuh  device_memory.cu  device_memory.cuh  device_reads.cu  device_reads.cuh  dist.cu  gpu.hpp  gpu_api.cpp  gpu_countmin.cu  gpu_countmin.cuh  sketch.cu
src/random/: random_match.cpp  random_match.hpp  rng.cpp  rng.hpp
src/sketch/: bitfuncs.hpp  countmin.cpp  countmin.hpp  ntHashIterator.hpp  nthash.hpp  nthash_tables.hpp  progress.hpp  seqio.cpp  seqio.hpp  sketch.cpp  sketch.hpp  stHashIterator.hpp
src/test/: gpu_dist_test.cpp  main.cpp  matrix_test.cpp  read_test.cpp
src/web/: .gitignore  web_sketch.cpp  worker.html  worker.js
test/: clean_test.py  db1_refs.txt  db2_refs.txt  dist_test.py  gpu_test.py  ppsketch_ref.npy  ppsketch_ref_jaccard.npy  ppsketch_ref_phased.npy  ppsketch_ref_phased.pkl  ppsketch_ref_phased_jaccard.npy  ppsketch_ref_phased_raw_jaccard.npy  ppsketch_ref_raw_jaccard.npy  qlist.txt  rlist.txt  run_test.py  small_mass.h5  small_mass_plus1.h5  test-dists.py  test-matrix.py
